# glue

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/png++-0.2.9/: error.hpp
glue/: glue.sln  glue.vcxproj  glue.vcxproj.filters
glue/src/: main.cpp
glue/src/core/: camera.cpp  camera.h  coordinate_space.cpp  coordinate_space.h  discrete_1d_sampler.cpp  filter.cpp  (+30 more)
sample_input/: armadillo.xml  buddha.xml  buddhas.xml  cbox.xml  cornell-buddha-new.xml  cornell-buddha.xml  cornell-dragon.xml  cornell-groot.xml  cornell-lucy.xml  cornell-test.xml  dragon.xml  environment-test.xml  glue-test.xml  material-test.xml  test.xml  veach-mis.xml
src/: main.cpp
src/core/: coordinate_space.h  discrete_1d_sampler.cpp  discrete_1d_sampler.h  discrete_2d_sampler.cpp  discrete_2d_sampler.h  filter.cpp  filter.h  forward_decl.h  image.cpp  image.h  math.h  output.cpp  output.h  pinhole_camera.cpp  pinhole_camera.h  real_sampler.cpp  real_sampler.h  scene.cpp  scene.h  timer.cpp  timer.h  tonemapper.cpp  tonemapper.h
src/geometry/: bbox.cpp  bbox.h  bvh.h  intersection.h  mapper.cpp  mapper.h  mesh.cpp  mesh.h  object.cpp  object.h  plane.cpp  plane.h  ray.cpp  ray.h  sphere.cpp  sphere.h  spherical_coordinate.cpp  spherical_coordinate.h  transformation.cpp  transformation.h  triangle.cpp  triangle.h
src/integrator/: integrator.cpp  integrator.h  pathtracer.cpp  pathtracer.h  sppm.cpp  sppm.h
src/light/: diffuse_arealight.cpp  diffuse_arealight.h  environment_light.cpp  environment_light.h  light.cpp  light.h  pointlight.cpp  pointlight.h
src/material/: bsdf_material.cpp  bsdf_material.h  dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h  oren_nayar.cpp  oren_nayar.h  smooth_layered.cpp  smooth_layered.h
src/microfacet/: beckmann_distribution.cpp  beckmann_distribution.h  fresnel.cpp  fresnel.h  ggx_distribution.cpp  ggx_distribution.h  microfacet_reflection.h  microfacet_reflection.inl  microfacet_refraction.h  microfacet_refraction.inl  microfacet_scattering.h  microfacet_scattering.inl
src/texture/: checkerboard_2d_texture.cpp  checkerboard_2d_texture.h  checkerboard_3d_texture.cpp  checkerboard_3d_texture.h  constant_texture.cpp  constant_texture.h  image_texture.cpp  image_texture.h  perlin_texture.cpp  perlin_texture.h  texture.cpp  texture.h
src/xml/: node.inl  parser.cpp  parser.h
(+82 files in other folders)
